Fix: alignment issues

--- a/src/blocks/table-of-contents/style.scss
+++ b/src/blocks/table-of-contents/style.scss
@@ -16,6 +16,7 @@
 
 	ul.uagb-toc__list {
 		margin-left:3em;
+		margin-bottom:0;
 	}
 
 	.uagb-toc__list-wrap ul {
